# SENTINEL_FACE_BACKEND

./: .env.example  .gitignore  BACKEND_FIXES.md  Dockerfile  README.md  app.py  blink_detector.py  db.py  docker-compose.yml  env.example  face_logic.py  gunicorn.conf.py  init.sql  liveness.py  pyproject.toml  pyrightconfig.json
api/: __init__.py  decorators.py
api/controllers/: alert_controller.py  audit_controller.py  auth_controller.py  employee_controller.py  log_controller.py  role_controller.py  usuario_controller.py
api/models/: admin.py  alert.py  audit.py  employee.py  log.py  role.py  usuario.py
api/routes/: alert_ns.py  audit_ns.py  auth_ns.py  employee_ns.py  log_ns.py  recognize_ns.py  role_ns.py  usuario_ns.py
