[project]
name = "sentinel-face"
version = "0.1.0"
description = "Sistema de Seguridad Biometrica con Deteccion de Vida"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "opencv-python",
    "numpy",
    "insightface",
    "onnxruntime",
    "mysql-connector-python",
    "python-dotenv>=1.2.2",
    "flask-cors>=6.0.2",
    "gunicorn>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    ".venv",
    "models",
    "__pycache__",
    "*.onnx",
    "*.pyc"
]
